sylvia/tests/ui/method_signature/reply.stderr
error: Mismatched parameter in reply handlers.

         = note: Parameters for the `on_instantiated` handler have to be the same.
         = note: Previous parameter defined for the `on_instantiated` handler.

  --> tests/ui/method_signature/reply.rs:26:13
   |
26 |             param: String,
   |             ^^^^^

error: Mismatched quantity of method parameters.

         = note: Both `on_instantiated` handlers should have the same number of parameters.
         = note: Previous definition of on_instantiated handler.

  --> tests/ui/method_signature/reply.rs:55:12
   |
55 |         fn first_reply(
   |            ^^^^^^^^^^^

error: Wrong usage of `#[sv::data]` attribute.

         = note: The `#[sv::data]` attribute can only be used on the first parameter after the `ReplyCtx`.

  --> tests/ui/method_signature/reply.rs:99:35
   |
99 |             #[sv::data(opt, raw)] _data: Option<Binary>,
   |                                   ^^^^^

error: Redundant payload parameter.

         = note: Expected no parameters between the parameter marked with `#[sv::data]` and `#[sv::payload(raw)]`.

  --> tests/ui/method_signature/reply.rs:97:13
   |
97 |             redundant_before1: u32,
   |             ^^^^^^^^^^^^^^^^^

error: Redundant payload parameter.

         = note: Expected no parameters between the parameter marked with `#[sv::data]` and `#[sv::payload(raw)]`.

   --> tests/ui/method_signature/reply.rs:110:13
    |
110 |             redundant_between1: u32,
    |             ^^^^^^^^^^^^^^^^^^

error: Redundant payload parameter.

         = note: Expected no parameters after the parameter marked with `#[sv::payload(raw)]`.

   --> tests/ui/method_signature/reply.rs:125:13
    |
125 |             redundant: Binary,
    |             ^^^^^^^^^
